# news_letter_agent

./: .env  README.md  crew_orchestrator.py  main.py  pyproject.toml
actors/: editorial_actor.py  research_actor.py  summary_actor.py
agents/: news_gatherer.py
config/: settings.py
prompts/: editorial_agent.yaml  news_gatherer.yaml  news_gatherer_prompts.py  research_agent.yaml  summarizer_agent.yaml
schemas/: state_schemas.py
tools/: news_tools.py
